kube/services/bethanyspieshophrm.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bethanyspieshophrm
  labels:
    app: bethanyspieshophrm
  namespace: bethany
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
  selector:
    app: bethanyspieshophrm
