kube/services/bethany.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bethany
spec:
  ingressClassName: nginx
  rules:
  - host: pieshop.kapilkhubchandani.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bethanyspieshophrm
            port:
              number: 80
